Closed Bug 368370 Opened 19 years ago Closed 19 years ago

"uncolored" tags inherit colors from other tags

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: flaimo+bugzilla, Assigned: mnyromyr)

Details

(Keywords: fixed-seamonkey1.1.1, verified1.8.1.3)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1 Build Identifier: thunderbird 2.0 beta 2 seems like there is a little problem when displaying the colors of tags in the dropdown menu (and also in the list in the options-dialog). if you create tags WITHOUT a color information and then tags WITH a color information, the tags without the color inherit the color from the later tag. Reproducible: Always Steps to Reproduce: 1) click the "tag" button and then "new tag…" 2) name the new tag "X" and DON'T choose a color. click "OK" 3) create another tag "Y", again without choosing a color 4) create another tag "Z", but this time choose a color 5) click the "tag" button again. "X" and "Y" inherit the color choosen for "Z" Actual Results: see step 5) if you choose red as a color for "Z", then "X" and "Y" also become red. Expected Results: when not choosing a color, the defaulttextcolor should be black, but not take the color information from an unrelated tag.
->NEW on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.2pre) Gecko/20070127 Thunderbird/2.0pre ID:2007012703
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Hardware: PC → All
Version: unspecified → 2.0
This is a regression of bug 354726, where the error code for GetColorForKey was dropped.
Assignee: mscott → mnyromyr
Assignee: mnyromyr → nobody
Component: General → MailNews: Backend
Product: Thunderbird → Core
QA Contact: general → backend
Version: 2.0 → Trunk
Assignee: nobody → mnyromyr
GetColorForKey doesn't do anything wrt the result in the error case, so we can safely empty the string before looking for colours.
Attachment #255452 - Flags: superreview?(bienvenu)
Attachment #255452 - Flags: review?(bienvenu)
Attachment #255452 - Flags: superreview?(bienvenu)
Attachment #255452 - Flags: superreview+
Attachment #255452 - Flags: review?(bienvenu)
Attachment #255452 - Flags: review+
Comment on attachment 255452 [details] [diff] [review] set default colour to be empty Karsten, can you land this on the branch too?
Attachment #255452 - Flags: approval-thunderbird2+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
I included this fix in the SeaMonkey 1.1.1 release tag.
adding the fixed1.8.1.3 keyword since karsten kindly landed this on the mozilla 1.8 branch.
Keywords: fixed1.8.1.3
verified on the 1.8 branch using Win XP. I verified using the Tbird candidate build, version 2.0.0.0 (20070326). I was not able to reproduce using the original STR. Adding verified keyword for the branch.
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: