Bug 368370: "uncolored" tags inherit colors from other tags; r/sr=bienvenu